...
                            <constraint firstItem="z7b-Af-0eH" firstAttribute="trailing" secondItem="PQr-Ze-W5v" secondAttribute="trailing" id="Gu7-qv-D0A"/>
                            <constraint firstItem="fiY-ok-dIb" firstAttribute="top" secondItem="z7b-Af-0eH" secondAttribute="bottom" id="Yqr-Rw-jWJ"/>
                            <constraint firstItem="fiY-ok-dIb" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" id="dab-5x-PLJ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Feed" image="feed-tabIcon" selectedImage="feed-tabIcon" id="acW-dT-cKf"/>
                    <connections>
                        <outlet property="tableView" destination="fiY-ok-dIb" id="Yg8-CI-sUy"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
            </objects>
...
                            <constraint firstItem="EAB-2O-HB5" firstAttribute="leading" secondItem="u1D-bt-OI0" secondAttribute="leading" id="jLg-zh-5By"/>
                            <constraint firstItem="wKn-vi-B6g" firstAttribute="leading" secondItem="u1D-bt-OI0" secondAttribute="leading" id="lND-oZ-Szq"/>
                            <constraint firstItem="FsC-Dt-XVO" firstAttribute="trailing" secondItem="u1D-bt-OI0" secondAttribute="trailing" id="wIk-Xg-7E8"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="u1D-bt-OI0"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Me" image="me-tabIcon" selectedImage="me-tabIcon" id="zdY-7d-EGX"/>
                    <connections>
                        <outlet property="emailLabel" destination="UEQ-8D-7uc" id="mns-4U-SIk"/>
                        <outlet property="profileImage" destination="UBr-kg-MAZ" id="BUg-M7-NEq"/>
                        <outlet property="tableView" destination="FsC-Dt-XVO" id="ugs-kX-chZ"/>
                    </connections>
                </viewController>
...
                            <constraint firstItem="ZO4-yh-DRY" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" id="exM-Vj-X87"/>
                            <constraint firstItem="n3n-yF-oSC" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" id="qzy-2R-fkh"/>
                            <constraint firstItem="n3n-yF-oSC" firstAttribute="trailing" secondItem="O1u-W8-tvY" secondAttribute="trailing" id="tnt-Hb-f8M"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Groups" image="groups-tabIcon" selectedImage="groups-tabIcon" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="tableView" destination="n3n-yF-oSC" id="oyW-N5-M3J"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
            </objects>
...
