//
//  Break_PointUITests.swift
//  Break PointUITests
//
//  Created by Oforkanji Odekpe on 10/10/18.
//  Copyright © 2018 Oforkanji Odekpe. All rights reserved.
//

import XCTest

class Break_PointUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // Use recording to get started writing UI tests.

        let app = XCUIApplication()
        app.tabBars.buttons["Groups"].tap()
        app.tabBars.buttons["Me"].tap()
        app.tabBars.buttons["Feed"].tap()
        
        
        
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

}
